--- a/.env
+++ b/.env
@@ -26,7 +26,10 @@ APP_SECRET=a9c95612250444426f0b8c0fb8d5188d
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/voyages"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/voyages?serverVersion=8.3.0&charset=utf8mb4"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
